fix: overflow (#404)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -307,6 +307,10 @@ table tr:first-child {
 [data-theme="dark"] .scrollHint::before {
 }
 
+.row {
+  width: 100%;
+}
+
 @-webkit-keyframes slide-left {
   0%,
   30% {
